# NTU_timetable_to_ICS

./: .gitignore  Cargo.toml  LICENSE
src/: cal.rs  course.rs  lib.rs  main.rs
