[package]
name = "ntu_timetable_ics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["clock"] }
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.10.0"
error-stack = "0.3.1"
ics = "0.5.8"
itertools = "0.11.0"
log = "0.4.20"
regex = "1.9.3"
uuid = { version = "1.4.1", features = ["fast-rng", "v4"] }
